// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan Picker:  Render Function renders 1`] = `
<div
  className="PlanPicker"
>
  <Heading
    as="h5"
    className="PlanPickerHeader"
  >
    Premier
  </Heading>
  <div>
    <button
      className="PlanPickerTrigger"
      data-id="plan-picker-trigger"
      onClick={[Function]}
    >
      <Plan
        plan={
          Object {
            "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
            "overage": 0.4,
            "plan": "2.5M-0817",
            "price": 899,
            "product": "messaging",
            "volume": 2500000,
          }
        }
        planPriceProps={
          Object {
            "selectedPromo": undefined,
          }
        }
      />
      <ExpandMore
        size={32}
      />
    </button>
    <ol
      className="PlanPickerList"
    >
      <li
        className="PlanPickerHeader"
        key="label_test"
      >
        <Heading
          as="h5"
        >
          Test Account
        </Heading>
      </li>
      <li
        className="PlanPickerOption"
        index={0}
        item={
          Object {
            "bundle": "free500-0419",
            "messaging": Object {
              "plan": "free500-0419",
              "price": 0,
              "product": "messaging",
              "volume": 500,
            },
            "products": Array [
              Object {
                "plan": "free500-0419",
                "product": "messaging",
              },
            ],
            "status": "public",
            "tier": "test",
            "type": "messaging",
          }
        }
        key="0"
      >
        <Plan
          plan={
            Object {
              "plan": "free500-0419",
              "price": 0,
              "product": "messaging",
              "volume": 500,
            }
          }
        />
      </li>
    </ol>
  </div>
  <p
    className="PlanPickerHelpText"
  >
    <span>
      Interested in learning more about our Starter and Premier plans? Check out our
    </span>
     
    <ExternalLink
      to="https://www.sparkpost.com/docs/faq/difference-between-starter-and-premier"
    >
      Knowledge Base
    </ExternalLink>
  </p>
  <input
    readOnly={true}
    type="hidden"
  />
</div>
`;

exports[`Plan Picker:  renders correctly 1`] = `
<Field
  bundles={
    Array [
      Object {
        "bundle": "free500-0419",
        "messaging": Object {
          "plan": "free500-0419",
          "price": 0,
          "product": "messaging",
          "volume": 500,
        },
        "products": Array [
          Object {
            "plan": "free500-0419",
            "product": "messaging",
          },
        ],
        "status": "public",
        "tier": "test",
        "type": "messaging",
      },
      Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    ]
  }
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  name="planpicker"
/>
`;

exports[`Plan Picker:  renders correctly with an initial value 1`] = `
<Field
  bundles={
    Array [
      Object {
        "bundle": "free500-0419",
        "messaging": Object {
          "plan": "free500-0419",
          "price": 0,
          "product": "messaging",
          "volume": 500,
        },
        "products": Array [
          Object {
            "plan": "free500-0419",
            "product": "messaging",
          },
        ],
        "status": "public",
        "tier": "test",
        "type": "messaging",
      },
      Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    ]
  }
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    }
  }
  name="planpicker"
/>
`;
